mdds 1.4.2

* all

  * fixed CXXFLAGS incorrectly being overwritten.

  * addressed a number of Coverity issues.

mdds 1.4.1

* all

  * fixed all warnings on shadowed variables.

* multi_type_matrix

  * all of its walk() methods now return either a copied or moved
    instance of the function object passed in as an input argument.
    Previously these methods had no return values.

mdds 1.4.0

* rtree (new)

  * new data structure designed for optimal storage and query
    performance on multi-dimensional spatial data.  The structure allows
    storage of both point and extent-based boundaries as keys associated
    with values.

* multi_type_vector

  * mtv::elemnt_block now has the following methods: data(), cbegin(),
    cend(), crbegin() and crend().

  * multi_type_vector now has cbegin(), cend(), crbegin(), and crend()
    methods.

  * some unnecessary user-provided special members have been removed to
    avoid warnings with -Wdeprecated-copy with GCC 9.

* multi_type_matrix

  * all of its walk() methods now allow in-line lambdas to be used, by
    not taking a reference of the function object parameters.

mdds 1.3.1

* flat_segment_tree

  * fixed a bug that caused an assertion error when inserting a
    out-of-bound segment whose start value equals the max key value.

mdds 1.3.0

* multi_type_vector

  * changed the primary block array storage to remove additional
    indirection, for improved memory locality.

mdds 1.2.3

* all

  * changed the configure script to use --docdir unmodified.

* flat_segment_tree

  * added a segment iterator whose node value consists of the start
    and end keys and the value associated with each segment.  its
    start and end positions can be retrieved via begin_segment() and
    end_segment() methods.

mdds 1.2.2

* flat_segment_tree

  * fixed a bug that would cause segmentation faults with the insert()
    method with out-of-bound segment value pair.

mdds 1.2.1

* multi_type_vector
