@@ -1,3 +1,8 @@
+* flat_segment_tree
+
+  * fixed invalid memory access issue related to the swap() method which
+    previously did not swap the non-leaf node pool store.
+
 mdds 1.4.2
 
 * all
